Sylvester just does not fit an AMD env properly, ditching dependence on it

--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "amd": {},
   "volo": {
-    "baseUrl": "lib",
+    "baseUrl": "vendor",
     "dependencies": {
-      "sylvester": "github:jcoglan/sylvester/0.1.3"
     }
   }
 }
